--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,12 +15,22 @@
         android:theme="@style/AppTheme" >
         android:debuggable="true"
         <activity
-            android:name="com.thenewboston.travis.StartingPoint"
+            android:name="com.thenewboston.travis.Splash"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name="com.thenewboston.travis.StartingPoint"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="com.thenewboston.travis.STARTINGPOINT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
