--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -34,6 +34,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.thenewboston.travis.TextPlay"
+            android:label="@string/app_name" >
+            
+        </activity>
+        <activity
             android:name="com.thenewboston.travis.Menu"
             android:label="@string/app_name" >
             <intent-filter>
