--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -39,6 +39,11 @@
             
         </activity>
         <activity
+            android:name="com.thenewboston.travis.Email"
+            android:label="@string/app_name" >
+            
+        </activity>
+        <activity
             android:name="com.thenewboston.travis.Menu"
             android:label="@string/app_name" >
             <intent-filter>
