--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
+    <uses-permission android:name="android.permission.SET_WALLPAPER"/>
 
     <application
         android:allowBackup="true"
@@ -35,14 +36,19 @@
         </activity>
         <activity
             android:name="com.thenewboston.travis.TextPlay"
-            android:label="@string/app_name" >
+            android:label="Text Player" >
             
         </activity>
         <activity
-            android:name="com.thenewboston.travis.Email"
-            android:label="@string/app_name" >
+            android:name="com.thenewboston.travis.Camera"
+            android:label="Photo Taker" >
             
         </activity>
+        <activity 
+            android:name="com.thenewboston.travis.Email"
+            android:label="Email Sender">
+         </activity>
+        
         <activity
             android:name="com.thenewboston.travis.Menu"
             android:label="@string/app_name" >
