--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -80,6 +80,15 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.thenewboston.travis.Prefs"
+            android:label="@string/app_name" >
+            <intent-filter>
+        <action android:name="com.thenewboston.travis.PREFS" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
